
--Fixed so that game always fills screen vertically as much as it can, 
  preserving whole-multiple game pixels, regardless of aspect ratio.  Before, 
  it wasn't working properly in 16:9.

--Moved token level numbers up one pixel to make them easier to read, and 
  redesigned some of the token icons to make this shift possible (thanks 
  Daniel Benmergui).




Version 13   2011-February-18     (First public release)

--Fixed a bunch of code warnings and a few bugs using cppcheck.

--Speed control keys are now off by default (can be turned on in settings).

--Fixed inside-enemy power-ups at level 0 so they are not capped at 1.




Version 12   2011-February-17

--Enemy base bullet speed now gradually increases, between levels 20 and 80, 
  up to being equal to player's bullet speed (before, enemy bullet speed was 
  always half player bullet speed).

--Fixed to eliminate easy 1-descent token doubling by reducing base level of 
  tokens that are on the floor inside a token.

--Changed base level of sub-tokens inside enemy tokens to mirror the new 
  player token distribution system (it really didn't make sense before).

--Increased difficulty modifier inside sub-token recursions.

--Capped heart bonus on knock-down to 8, to prevent gigantic heart bonuses
  that make you effectively invincible on higher levels.

--Fixed level difficulty modifier number overflower issues (thanks Jimmy 
  Andrews).

--Fixed power-set sum overflow issues (thanks Jimmy Andrews).

--Fixed power-up level numbers so that they don't overflow.  Added a bar-graph 
  style powers-of-ten display, along with three most significant digits.

--Fixed enemies getting stuck in corners after dodging.

--Fixed bug in health bar length when heart picked up right before rising.

--Fixed bug in token update when a sub-token picked up right before rising 
  (thanks Alexey Zubkov).

--Token sub-level colors now stay updated to match token as it changes (upon 
  reentering token).
